model registry and ...

--- a/01-intro/hw1.ipynb
+++ b/01-intro/hw1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "571258b3",
    "metadata": {},
    "outputs": [],
@@ -25,109 +25,120 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "586915cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_dataframe(filename):\n",
+    "    df = pd.read_parquet(filename)\n",
+    "    #df.head()\n",
+    "    df.tpep_pickup_datetime = pd.to_datetime(df.tpep_pickup_datetime)\n",
+    "    df.tpep_dropoff_datetime = pd.to_datetime(df.tpep_dropoff_datetime)\n",
+    "\n",
+    "    df['duration'] = df.tpep_dropoff_datetime - df.tpep_pickup_datetime\n",
+    "    df.duration = df.duration.apply(lambda td: td.total_seconds() / 60)\n",
+    "    \n",
+    "    # filter\n",
+    "    df = df[(df.duration >= 1) & (df.duration <= 60)]\n",
+    "\n",
+    "    categorical = ['PULocationID', 'DOLocationID']\n",
+    "    \n",
+    "    df[categorical] = df[categorical].astype(str) #int -> str\n",
+    "    \n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6002fd21",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_parquet(path)"
+    "#df = pd.read_parquet(path)\n",
+    "df = read_dataframe(path).sample(10000, random_state=1)\n",
+    "df_val = read_dataframe(path2).sample(10000, random_state=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b7bd1b4b",
+   "execution_count": 6,
+   "id": "cded5de8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_val = pd.read_parquet(path2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "cded5de8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "19\n"
-     ]
-    }
-   ],
-   "source": [
     "# 1.\n",
-    "print(len(df.columns))"
+    "# print(len(df.columns))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c7a41be3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Duration 표준편차: 42.59 분\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 2. duration 컬럼의 표준편차 구하기\n",
-    "df.tpep_pickup_datetime = pd.to_datetime(df.tpep_pickup_datetime)\n",
-    "df.tpep_dropoff_datetime = pd.to_datetime(df.tpep_dropoff_datetime)\n",
+    "# df.tpep_pickup_datetime = pd.to_datetime(df.tpep_pickup_datetime)\n",
+    "# df.tpep_dropoff_datetime = pd.to_datetime(df.tpep_dropoff_datetime)\n",
     "\n",
-    "df['duration'] = df.tpep_dropoff_datetime - df.tpep_pickup_datetime\n",
-    "df['duration'] = df['duration'].dt.total_seconds() / 60\n",
+    "# df['duration'] = df.tpep_dropoff_datetime - df.tpep_pickup_datetime\n",
+    "# df['duration'] = df['duration'].dt.total_seconds() / 60\n",
     "\n",
     "# print(f\"Duration 표준편차: {df['duration'].std():.2f} 분\") # mean median ..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "58461268",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9812202822125979"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#3. Fraction of records\n",
     "# 전체 데이터 중에 필터링된 데이터의 비율\n",
-    "total = len(df)\n",
-    "cond_trips = len(df[(df['duration'] >= 1) & (df['duration'] <= 60)])\n",
-    "fraction_normal = cond_trips / total\n",
-    "fraction_normal\n"
+    "# total = len(df)\n",
+    "# cond_trips = len(df[(df['duration'] >= 1) & (df['duration'] <= 60)])\n",
+    "# fraction_normal = cond_trips / total\n",
+    "# fraction_normal\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "852722ad",
    "metadata": {},
    "outputs": [],
    "source": [
     "#4. one hot encoding - 카테고리형 데이터를 모델이 이해할 수 있는 숫자로\n",
-    "df['PULocationID'] = df['PULocationID'].astype(str)\n",
-    "df['DOLocationID'] = df['DOLocationID'].astype(str)\n",
-    "# label encoding을 막기 위해 string으로 변환\n",
+    "# df['PULocationID'] = df['PULocationID'].astype(str)\n",
+    "# df['DOLocationID'] = df['DOLocationID'].astype(str)\n",
+    "# # label encoding을 막기 위해 string으로 변환\n",
     "pu = ['PULocationID']\n",
     "do = ['DOLocationID']\n",
     "\n",
     "dv = DictVectorizer()\n",
-    "some_dict = df[pu + do].to_dict(orient='records')  # 각 row를 하나의 딕셔너리로 \n",
+    "some_dict = df[pu + do].to_dict(orient='records')  # 각 row를 하나의 딕셔너리로 \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "cfc90e69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3009173, 515)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "\n",
     "# feature matrix : 모델의 입력 데이터 행렬\n",
     "X_train = dv.fit_transform(some_dict)\n",
@@ -175,39 +186,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d2849b02",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3066766, 518)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 5. Model training\n",
-    "categorical = ['PULocationID', 'DOLocationID']\n",
-    "numerical = ['duration']\n",
-    "train_dicts = df[categorical + numerical].to_dict(orient='records')\n",
+    "# categorical = ['PULocationID', 'DOLocationID']\n",
+    "# numerical = ['duration']\n",
     "\n",
-    "x_train = dv.fit_transform(train_dicts)\n",
-    "\n",
-    "\n",
-    "val_dicts = df_val[categorical + numerical].to_dict(orient='records')\n",
-    "X_val = dv.transform(val_dicts)\n",
-    "\n",
+    "# train_dicts = df[categorical + numerical].to_dict(orient='records')\n",
+    "# x_train = dv.fit_transform(train_dicts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6d4076e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# val_dicts = df_val[categorical + numerical].to_dict(orient='records')\n",
+    "# x_val = dv.transform(val_dicts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a22e4338",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#예측하고자 하는 목표값(여기서는 'duration' 컬럼)을 y_train에 저장합니다.\n",
-    "target = 'duration'\n",
-    "y_train = df_train[target].values\n",
-    "y_val = df_val[target].values\n",
-    "\n",
-    "\n"
+    "# target = 'duration'\n",
+    "# y_train = df[target].values\n",
+    "# y_val = df_val[target].values\n"
    ]
   }
  ],
