--- a/01-intro/hw1.ipynb
+++ b/01-intro/hw1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6ce983c3",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "571258b3",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "586915cc",
    "metadata": {},
    "outputs": [],
@@ -50,14 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6002fd21",
    "metadata": {},
    "outputs": [],
    "source": [
     "#df = pd.read_parquet(path)\n",
-    "df = read_dataframe(path).sample(10000, random_state=1)\n",
-    "df_val = read_dataframe(path2).sample(10000, random_state=1)\n"
+    "# df = read_dataframe(path).sample(100000, random_state=1)\n",
+    "# df_val = read_dataframe(path2).sample(100000, random_state=1)\n",
+    "\n",
+    "df = read_dataframe(path)\n",
+    "df_val = read_dataframe(path2)"
    ]
   },
   {
@@ -114,36 +117,37 @@
     "# df['PULocationID'] = df['PULocationID'].astype(str)\n",
     "# df['DOLocationID'] = df['DOLocationID'].astype(str)\n",
     "# # label encoding을 막기 위해 string으로 변환\n",
-    "pu = ['PULocationID']\n",
-    "do = ['DOLocationID']\n",
+    "# pu = ['PULocationID']\n",
+    "# do = ['DOLocationID']\n",
     "\n",
     "dv = DictVectorizer()\n",
-    "some_dict = df[pu + do].to_dict(orient='records')  # 각 row를 하나의 딕셔너리로 \n"
+    "# some_dict = df[pu + do].to_dict(orient='records')  # 각 row를 하나의 딕셔너리로 \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "cfc90e69",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(3009173, 515)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
     "\n",
     "# feature matrix : 모델의 입력 데이터 행렬\n",
-    "X_train = dv.fit_transform(some_dict)\n",
+    "# X_train = dv.fit_transform(some_dict)\n",
     "# 카테고리형 데이터의 개수가 feature의 개수 즉, feature matrix의 차원이 된다.\n",
-    "X_train.shape # get rows and columns\n",
+    "# X_train.shape # get rows and columns\n",
     "\n",
     "#print(X_train[:15, :10].toarray())\n"
    ]
@@ -186,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d2849b02",
    "metadata": {},
    "outputs": [],
@@ -196,12 +200,21 @@
     "# numerical = ['duration']\n",
     "\n",
     "# train_dicts = df[categorical + numerical].to_dict(orient='records')\n",
-    "# x_train = dv.fit_transform(train_dicts)"
+    "train_dicts = df.to_dict(orient='records')\n",
+    "x_train = dv.fit_transform(train_dicts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "id": "b65969e4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6d4076e0",
    "metadata": {},
    "outputs": [],
@@ -212,15 +225,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a22e4338",
    "metadata": {},
    "outputs": [],
    "source": [
     "#예측하고자 하는 목표값(여기서는 'duration' 컬럼)을 y_train에 저장합니다.\n",
-    "# target = 'duration'\n",
-    "# y_train = df[target].values\n",
-    "# y_val = df_val[target].values\n"
+    "target = 'duration'\n",
+    "y_train = df[target].values\n",
+    "y_val = df_val[target].values\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e240dae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.969895481889312e-05"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#선형회귀 모델을 생성하고, X_train(특성)과 y_train(목표값)으로 학습시킵니다.\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import root_mean_squared_error\n",
+    "\n",
+    "lr = LinearRegression()\n",
+    "lr.fit(x_train, y_train)\n",
+    "\n",
+    "#학습된 모델로 X_train에 대한 예측값을 구합니다.\n",
+    "y_pred = lr.predict(x_train)\n",
+    "\n",
+    "#회귀 문제에서 예측값과 실제값의 차이를 제곱해 평균을 낸 값(MSE, 평균제곱오차)을 계산\n",
+    "rmse = root_mean_squared_error(y_train, y_pred)\n",
+    "rmse"
    ]
   }
  ],
